Fixed issue with flickering on profile page

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -245,10 +245,14 @@ body {
   width: calc(100% - 280px);
 }
 
+/* Added overflow:hidden; to this class to fix a problem with the screen flickering between 2 and 3 columns
+   when someone hovered over either the rating or the number of views explorations in the second row and 
+   on when there are at least four explorations listed. */
 .oppia-profile-portfolio-container {
   margin: 0 auto;
   margin-bottom: 20px;
   width: 100%;
+  overflow: hidden;
 }
 
 .oppia-profile-portfolio-pages {
